<resources>
    <string name="app_name">SubBook</string>
    <string name="NewButton">New</string>
    <string name="AddSubscriptionTitle">Add Subscription</string>
    <string name="NewSubscriptionTitle">New Subscription</string>
    <string name="ExistingSubscriptionTitle">Edit Subscription</string>
    <string name="New_Subscription_Field_Name">Subscription</string>
    <string name="New_Subscription_Field_Date">Date</string>
    <string name="New_Subscription_Field_Description">Description (Optional)</string>
    <string name="New_Subscription_Field_Cost">Amount ($)</string>
    <string name="New_Subscription_Button_Add">Add</string>
    <string name="ExistingSubscriptionButton">Edit</string>
    <string name="NameTooLongErrorString">Subscription Name is too long. Must be 30 Characters</string>
    <string name="NegativeAmountErrorString">Amount Must not Be Negative!</string>
    <string name="DescriptionTooLongErrorString">Description is too Long!</string>
    <string name="DeleteButton">Delete</string>
</resources>
